--- a/ministère/frontend/package.json
+++ b/ministère/frontend/package.json
@@ -9,21 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "antd": "^5.24.8",
+    "@ant-design/compatible": "^5.1.4",
+    "antd": "5.24.8",
     "moment": "^2.30.1",
     "next": "15.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@eslint/eslintrc": "^3.0.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.7",
+    "eslint": "^9.0.0",
     "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.0.0"
+  },
+  "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
