--- a/mpci-api/.env.prod
+++ b/mpci-api/.env.prod
@@ -1,31 +1,32 @@
-# # In all environments, the following files are loaded if they exist,
-# # the latter taking precedence over the former:
-# #
-# #  * .env                contains default values for the environment variables needed by the app
-# #  * .env.local          uncommitted file with local overrides
-# #  * .env.$APP_ENV       committed environment-specific defaults
-# #  * .env.$APP_ENV.local uncommitted environment-specific overrides
-# #
-# # Real environment variables win over .env files.
-# #
-# # DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
-# # https://symfony.com/doc/current/configuration/secrets.html
-# #
-# # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
-# # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
+# In all environments, the following files are loaded if they exist,
+# the latter taking precedence over the former:
+#
+#  * .env                contains default values for the environment variables needed by the app
+#  * .env.local          uncommitted file with local overrides
+#  * .env.$APP_ENV       committed environment-specific defaults
+#  * .env.$APP_ENV.local uncommitted environment-specific overrides
+#
+# Real environment variables win over .env files.
+#
+# DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
+# https://symfony.com/doc/current/configuration/secrets.html
+#
+# Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
+# https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
-# ###> symfony/framework-bundle ###
-# APP_ENV=prod
-# APP_SECRET=86ac740d0c0b8fdf8aa7fd2fe0a5f671
-# ###< symfony/framework-bundle ###
+###> symfony/framework-bundle ###
+APP_ENV=prod
+APP_SECRET=86ac740d0c0b8fdf8aa7fd2fe0a5f671
+###< symfony/framework-bundle ###
 
-# ###> doctrine/doctrine-bundle ###
-# # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-# #
-# DATABASE_URL="mysql://dbu3161513:TON_MOT_DE_PASSE@db5018049130.hosting-data.io:3306/dbs14343385"
-# ###< doctrine/doctrine-bundle ###
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+DATABASE_URL="mysql://dbu3161513:guinea-mpci%40@db5018049130.hosting-data.io:3306/dbs14343385"
 
-# ###> nelmio/cors-bundle ###
-# CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
-# ###< nelmio/cors-bundle ###
+###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
