--- a/mpci-api/config/packages/nelmio_cors.yaml
+++ b/mpci-api/config/packages/nelmio_cors.yaml
@@ -1,27 +1,13 @@
 nelmio_cors:
     defaults:
         allow_credentials: true
-        allow_origin: ['http://localhost:3000']
+        allow_origin: []
         allow_headers: ['Content-Type', 'Authorization']
         allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
         max_age: 3600
     paths:
         '^/api/':
-            origin_regex: false
-            allow_origin: ['http://localhost:3000']
+            allow_origin: ['https://jpci.vercel.app', 'https://m.j-pci.com']
             allow_headers: ['Content-Type', 'Authorization']
-            allow_methods: ['GET', 'POST', 'OPTIONS']
-
-
-# nelmio_cors:
-#     defaults:
-#         origin_regex: true
-#         allow_origin: ['http://localhost:3000']
-#         # allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
-#         allow_methods: ['GET', 'OPTIONS', 'POST']
-#         allow_headers: ['*']
-#         # allow_headers: ['Content-Type', 'Authorization']
-#         expose_headers: ['*']
-#         max_age: 3600
-#     paths:
-#         '^/': null
+            allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
+            max_age: 3600
