--- a/mpci-api/config/packages/security.yaml
+++ b/mpci-api/config/packages/security.yaml
@@ -38,7 +38,11 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        #- { path: ^/guinee-administrateur, roles: ROLE_USER }
+        - { path: ^/guinee-administrateur, roles: ROLE_USER }
+        - { path: ^/api/evenements, roles: ROLE_USER }
+        - { path: ^/api/evenement/actif, roles: ROLE_USER }
+        - { path: ^/api/evenement/[^/]+$, roles: ROLE_USER }
+
 
 when@test:
     security:
