--- a/mpci-api/composer.json
+++ b/mpci-api/composer.json
@@ -24,6 +24,8 @@
         "symfony/serializer": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
         "symfony/yaml": "7.2.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0",
         "vich/uploader-bundle": "^2.7"
     },
     "require-dev": {
