--- a/mpci-api/config/packages/nelmio_cors.yaml
+++ b/mpci-api/config/packages/nelmio_cors.yaml
@@ -1,19 +1,34 @@
 nelmio_cors:
+    defaults:
+        allow_credentials: true
+        allow_origin: ['http://localhost:3000']
+        allow_headers: ['Content-Type', 'Authorization']
+        allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
+        max_age: 3600
     paths:
         '^/api/':
-            allow_origin:
-                - 'https://jpci.vercel.app'
-                - 'https://m.j-pci.com'
-            allow_headers:
-                - 'Content-Type'
-                - 'Authorization'
-            allow_methods:
-                - 'GET'
-                - 'OPTIONS'
-                - 'POST'
-                - 'PUT'
-                - 'PATCH'
-                - 'DELETE'
-            expose_headers:
-                - 'Link'
-            max_age: 3600
+            origin_regex: false
+            allow_origin: ['http://localhost:3000']
+            allow_headers: ['Content-Type', 'Authorization']
+            allow_methods: ['GET', 'POST', 'OPTIONS']
+
+# nelmio_cors:
+#     paths:
+#         '^/api/':
+#             allow_origin:
+#                 - 'https://jpci.vercel.app'
+#                 - 'https://m.j-pci.com'
+#                 - 'http://localhost:3000/'
+#             allow_headers:
+#                 - 'Content-Type'
+#                 - 'Authorization'
+#             allow_methods:
+#                 - 'GET'
+#                 - 'OPTIONS'
+#                 - 'POST'
+#                 - 'PUT'
+#                 - 'PATCH'
+#                 - 'DELETE'
+#             expose_headers:
+#                 - 'Link'
+#             max_age: 3600
